fix references to dynamo

--- a/app/edit.html
+++ b/app/edit.html
@@ -38,28 +38,28 @@
 
 <script type="text/javascript" src="../config.js"></script>
 <script language="Javascript" src="js/vendor/state-machine.min.js"></script>
-<script language="Javascript" src="dynamo/vendor/jquery-1.9.1.min.js"></script>
+<script language="Javascript" src="../dynamo/vendor/jquery-1.9.1.min.js"></script>
 <script language="Javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 <script language="Javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script language="Javascript" src="dynamo/vendor/lodash-1.2.1.dev.js"></script>
-<script language="Javascript" src="dynamo/vendor/backbone-1.0.0.min.js"></script>
+<script language="Javascript" src="../dynamo/vendor/lodash-1.2.1.dev.js"></script>
+<script language="Javascript" src="../dynamo/vendor/backbone-1.0.0.min.js"></script>
 <script language="Javascript" src="js/vendor/knockout-2.2.min.js"></script>
 
-<script language="Javascript" src="dynamo/vendor/tee.js"></script>
+<script language="Javascript" src="../dynamo/vendor/tee.js"></script>
 <script language="Javascript" src="ckeditor/ckeditor.js"></script>
 
-<script type="text/javascript" src="dynamo/_templates.js"></script>
-<script type="text/javascript" src="dynamo/Core.js"></script>
+<script type="text/javascript" src="../dynamo/_templates.js"></script>
+<script type="text/javascript" src="../dynamo/Core.js"></script>
 <script type="text/javascript"> Dynamo.TriremeURL = Config.TriremeURL; </script>
-<script type="text/javascript" src="dynamo/Core.Models.js"></script>
+<script type="text/javascript" src="../dynamo/Core.Models.js"></script>
 <script type="text/javascript"> Dynamo.XelementClass = eval(Config.DynamoXelementClass); </script>
-<script type="text/javascript" src="dynamo/Core.Collections.js"></script>
-<script type="text/javascript" src="dynamo/Core.Views.js"></script>
+<script type="text/javascript" src="../dynamo/Core.Collections.js"></script>
+<script type="text/javascript" src="../dynamo/Core.Views.js"></script>
 
 
-<script type="text/javascript" src="dynamo/Guides.Models.js"></script>
-<script type="text/javascript" src="dynamo/Guides.Collections.js"></script>
-<script type="text/javascript" src="dynamo/Guides.Views.js?update=1"></script>
+<script type="text/javascript" src="../dynamo/Guides.Models.js"></script>
+<script type="text/javascript" src="../dynamo/Guides.Collections.js"></script>
+<script type="text/javascript" src="../dynamo/Guides.Views.js?update=1"></script>
 
 <script type="text/javascript" language="javascript">
 
